--- a/public/frontend/styles/main.scss
+++ b/public/frontend/styles/main.scss
@@ -6,6 +6,31 @@ body {
     overflow-x: hidden;
 }
 
+.section-login{
+    .card{
+        margin-top: 100px;
+        margin-bottom: -20px;
+    }
+}
+.section-register{
+    .card{
+        margin-top: 100px;
+        margin-bottom: -130px;
+    }
+}
+.section-lupa-password{
+    .card{
+        margin-top: 100px;
+        margin-bottom: -130px;
+    }
+}
+.section-confirm{
+    .card{
+        margin-top: 100px;
+        margin-bottom: -130px;
+    }
+}
+
 //Navbar
 .navbar-brand {
     img {
